<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f8fb"
    android:scrollbars="none">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <com.bluewhaledt.saylove.ui.info.widget.ItemLayout
            android:id="@+id/require_age_item_layout"
            style="@style/ModifyEnableStyle"
            app:leftText="@string/age"
            app:rightText="@string/select_nothing" />

        <com.bluewhaledt.saylove.ui.info.widget.ItemLayout
            android:id="@+id/require_height_item_layout"
            style="@style/ModifyEnableStyle"
            app:leftText="@string/height"
            app:rightText="@string/select_nothing"/>

        <com.bluewhaledt.saylove.ui.info.widget.ItemLayout
            android:id="@+id/require_income_item_layout"
            style="@style/ModifyEnableStyle"
            app:leftText="@string/income"
            app:rightText="@string/select_nothing" />

        <com.bluewhaledt.saylove.ui.info.widget.ItemLayout
            android:id="@+id/require_work_city_item_layout"
            style="@style/ModifyEnableStyle"
            app:leftText="@string/work_city"
            app:rightText="@string/select_nothing" />

        <com.bluewhaledt.saylove.ui.info.widget.ItemLayout
            android:id="@+id/require_native_item_layout"
            style="@style/ModifyEnableStyle"
            app:leftText="@string/native_place"
            app:rightText="@string/select_nothing"/>


        <com.bluewhaledt.saylove.ui.info.widget.ItemLayout
            android:id="@+id/require_marry_status_item_layout"
            style="@style/ModifyEnableStyle"
            app:leftText="@string/marital_status"
            app:rightText="@string/select_nothing" />

    </LinearLayout>
</ScrollView>