<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/tv_visitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="23.5dp"
        android:text="@string/preview"
        android:textColor="@color/common_black_color"
        android:textSize="@dimen/common_text_size" />

    <Button
        android:id="@+id/btn_login"
        style="@style/CommonButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_above="@+id/tv_visitor"
        android:layout_marginBottom="8dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_regist"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        style="@style/BlackButtonStyle"
        android:layout_above="@+id/btn_login"
        android:layout_marginBottom="15dp"
        android:text="@string/regist" />
</RelativeLayout>