<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:background="@mipmap/banner"
        android:gravity="center"
        android:text="@string/whats_your_gender"
        android:textColor="@color/bander_text_color"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_gender"
        android:layout_marginTop="77dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_male"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            android:src="@drawable/male_selector"
          />
        <TextView
            android:layout_marginTop="22.5dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/male"
          android:textColor="#3a3a3a"
          android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_female"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            android:background="@drawable/female_selector"
          />
        <TextView
          android:layout_marginTop="22.5dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/female"
          android:textColor="#3a3a3a"
          android:textSize="14sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="23.5dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcom"
            android:textColor="#808080"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/andsoon"
            android:textColor="#808080"
            android:textSize="13sp"/>
    </LinearLayout>
</RelativeLayout>