<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fragment_recommend_layout_refreshlayout"
              android:layout_width="match_parent"
             android:background="#ffffff"
              android:layout_height="match_parent">

    <com.bluewhaledt.saylove.ui.recommend.widget.SwipeRecyclerView
        android:divider="@null"
        android:id="@+id/fragment_recommend_layout_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/fragment_recommend_detail_no_net_work_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginTop="108dp"
                   android:src="@mipmap/icon_tab_home_noselected"
        />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginTop="20dp"
                  android:text="@string/recommend_tourist_no_view"
                  android:textSize="14sp"
        />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginTop="5dp"
                  android:text="@string/recommend_tourist_try_again"
                  android:textSize="15sp"
        />
        <Button
            android:id="@+id/fragment_recommend_btn_try_again"
            style="@style/BlackButtonStyle"
            android:layout_marginTop="35dp"
            android:text="@string/recommend_tourist_try_again_more"
        />

    </LinearLayout>
</RelativeLayout>